--- a/about-me.css
+++ b/about-me.css
@@ -8,23 +8,51 @@ body {
     
 }
 
+a {
+    color:rgb(154, 156, 14);
+    font-family: monospace;
+    font-weight: 900;
+}
+
+
+
 .header-nav {
     position: fixed;
-    float: top;
-    height: 70%;
-    display: block;
-    background-color: rgb(197, 199, 204);
-    padding-right: 20px;
-    border: 5px solid red;
-
-
+    z-index: 2;
 }
 
-main {
-    margin-left: 190px;
+.short-intro
+{
+    background-color: black;
+    color: white;
+    border: solid salmon;
+    padding: 10px;
+    z-index: 1;
+    width: 60%;
+    margin: auto;
+} 
+
+.contact-me {
+    background-color: black;
+    color: white;
+    border: solid salmon;
+    padding: 10px;
+    z-index: 1;
+    width: 60%;
+    margin: auto;
 }
 
-#short-intro, #contact-me, #languages, #projects {
+.languages {
+    background-color: black;
+    color: white;
+    border: solid salmon;
+    padding: 10px;
+    z-index: 1;
+    width: 60%;
+    margin: auto;
+}
+
+.projects {
     background-color: black;
     color: white;
     border: solid salmon;
@@ -38,6 +66,7 @@ main {
     background-color: black;
     color: white;
     border: 5px solid white;
+    width: 70%;
 }
 
 form {
@@ -51,12 +80,77 @@ form {
     margin: auto;
 }
 
-a {
-    color:rgb(39, 7, 7);
-    font-family: monospace;
-    font-weight: 900;
-}
+
 form > input {
-    width:50px;
+    width: 50px;
     text-align: center;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+@media only screen and (max-width: 1200px){
+    
+    .contact-me,
+    .languages,
+    .projects,
+    form {
+        width: 90%;
+    }
+
+
+    #header-nav-list a {
+
+        color: rgb(255, 255, 255);
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+
+    }
+    #header-nav-list li {
+        display: inline-block; /* Display list items inline */
+    }
+
+    .short-intro {
+        width:70%;
+    }
+    .header-nav ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #c50505;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        white-space: nowrap;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+
+    
+    #header-nav-list a {
+        position: absolute; /* Position them relative to the browser window */
+        left: -60px; /* Position them outside of the screen */
+        transition: 0.6s; /* Add transition on hover */
+        width: auto; /* Set a specific width */
+        text-decoration: none; /* Remove underline */
+        font-size: 15px; /* Increase font size */
+        color: white; /* White text color */
+        background-color: black;
+        border-radius: 0 5px 5px 0; /* Rounded corners on the top right and bottom right side */
+      }
+      
+    #header-nav-list a:hover {
+        left: 0px; /* On mouse-over, make the elements appear as they should */
+        font-size: 30px;
+        width:auto;
+      }
+    #header-nav-list {
+        line-height: 30px;
+    }
+
 }
