--- a/about-me.css
+++ b/about-me.css
@@ -13,7 +13,10 @@ a {
     font-family: monospace;
     font-weight: 900;
 }
-
+img {
+    height: 30%;
+    width: 30%;
+}
 
 
 .header-nav {
@@ -91,13 +94,13 @@ form > input {
     width: 100%;
 }
 
-@media only screen and (max-width: 1200px){
+@media only screen and (max-width: 1200px) {
     
     .contact-me,
     .languages,
     .projects,
     form {
-        width: 90%;
+        width: 90;
     }
 
 
@@ -114,7 +117,7 @@ form > input {
     }
 
     .short-intro {
-        width:70%;
+        width:90%;
     }
     .header-nav ul {
         list-style: none;
@@ -152,5 +155,23 @@ form > input {
     #header-nav-list {
         line-height: 30px;
     }
+    .short-intro,
+    .languages,
+
+    .contact-me,
+    form {
+        width: 30%;
+    }
+
+    .projects {
+        width: 100%;
+    }
+
+    .container {
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+
 
 }
+
